# agent-api

./: .dockerignore  .gitignore  LICENSE  README.md  compose.yaml  example.env  pyproject.toml  requirements.txt
.github/workflows/: validate.yml
agent-ui/: CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml
agent-ui/.github/workflows/: validate.yml
agent-ui/src/: store.ts
agent-ui/src/api/: playground.ts  routes.ts
agent-ui/src/app/: globals.css  layout.tsx  page.tsx
agent-ui/src/components/playground/ChatArea/: ChatArea.tsx  MessageArea.tsx  ScrollToBottom.tsx  index.ts
agent-ui/src/components/playground/Sidebar/: AgentSelector.tsx  NewChatButton.tsx  Sidebar.tsx
agent-ui/src/components/ui/: dialog.tsx  select.tsx  skeleton.tsx  textarea.tsx
agent-ui/src/hooks/: useAIResponseStream.tsx  useAIStreamHandler.tsx  useChatActions.ts  useSessionLoader.tsx
agent-ui/src/lib/: audio.ts  constructEndpointUrl.ts  modelProvider.ts  utils.ts
agent-ui/src/types/: playground.ts
agents/: agno_assist.py  csv_agent.py  enhanced_csv_agent.py  excel_processor_agent.py  finance_agent.py  selector.py  seo_keyword_agent.py  web_agent.py
api/: main.py  settings.py
api/routes/: agents.py  excel_processor.py  health.py  playground.py  v1_router.py
db/: session.py  url.py
scripts/: build_image.sh  entrypoint.sh  generate_requirements.sh
tmp/: csv_keyword_analysis_agent.db  csv_playground_session_workflow.db  csv_playground_workflow.db  seo_keyword_agent_sessions.db
workflows/: __init__.py  csv_workflow.py  excel_workflow.py
(+34 files in other folders)
